<resources>
    <string name="app_name">TicTacToe</string>
    <string name="homeTitle"> Tic Tac Toe</string>
    <string name="playButton">PLAY</string>
    <string name="PlayerSetupTitle">Enter Your Name</string>
    <string name="Label1">Player1</string>
    <string name="Label2">Player2</string>
    <string name="submitButton">Submit Names</string>
    <string name="NameHint">Enter Your Name</string>
    <string name="playAgainButton">Play Again</string>
    <string name="homeButton">Home</string>

</resources>